# crypto-cli

./: .gitignore  Cargo.toml  README.md
script/: batch_decrypt.sh  decrypt.sh  encrypt.sh  find_symmetric_key.sh  get_vdf_zkp.sh  verify.sh
script/data/: batch_decryption_info_example.data  encryption_info_sample.json
src/: arguments.rs  info_types.rs  main.rs
